force-app/main/default/objects/RateAssignation__c/RateAssignation__c.object-meta.xml
<CustomObject>
    <label>Asignación de Tarifa</label>
    <nameField>
        <displayFormat>RA {000000}</displayFormat>
        <label>Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asignaciones de Tarifa</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>