force-app/main/default/objects/RateAssignation__c/fields/Dimension3__c.field-meta.xml
<CustomField>
    <fullName>Dimension3__c</fullName>
    <label>Dimensión 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1000-DU</fullName>
            </value>
            <value>
                <fullName>1100-CV</fullName>
            </value>
            <value>
                <fullName>1200-AGRI</fullName>
            </value>
            <value>
                <fullName>1300-IND</fullName>
            </value>
            <value>
                <fullName>1400-HRO</fullName>
            </value>
            <value>
                <fullName>1500-COL</fullName>
            </value>
            <value>
                <fullName>1800-PC</fullName>
            </value>
            <value>
                <fullName>1850-PM</fullName>
            </value>
            <value>
                <fullName>1900-FLT</fullName>
            </value>
            <value>
                <fullName>2000-OP</fullName>
            </value>
            <value>
                <fullName>2100-DIGR</fullName>
            </value>
            <value>
                <fullName>2200-DIPC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>