force-app/main/default/objects/RateAssignation__c/fields/GasRate__c.field-meta.xml
<CustomField>
    <fullName>GasRate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tarifa de Gas</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Asignaciones</relationshipLabel>
    <relationshipName>RateAssignations</relationshipName>
    <type>Lookup</type>
</CustomField>