force-app/main/default/objects/RateAssignation__c/fields/IsTankOwner__c.field-meta.xml
<CustomField>
    <fullName>IsTankOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Propietario del Depósito</label>
    <type>Checkbox</type>
</CustomField>