force-app/main/default/objects/RateAssignation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Asignaciones de Tarifa (Product)</relationshipLabel>
    <relationshipName>Asignaciones_de_Tarifa</relationshipName>
    <type>Lookup</type>
</CustomField>