force-app/main/default/objects/RateAssignation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dimension1__c</columns>
    <columns>Dimension3__c</columns>
    <columns>IsTankOwner__c</columns>
    <columns>County__c</columns>
    <columns>Product__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>County__c</field>
        <operation>equals</operation>
        <value>Barcelona,Lleida/Lérida</value>
    </filters>
    <filters>
        <field>Dimension1__c</field>
        <operation>equals</operation>
        <value>10-BULK</value>
    </filters>
    <filters>
        <field>Dimension3__c</field>
        <operation>equals</operation>
        <value>1400-HRO</value>
    </filters>
    <label>All</label>
</ListView>